--- a/style.css
+++ b/style.css
@@ -20,4 +20,39 @@
     text-align: center;
  }
 
+ .search{
+   width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.search input{
+    border: none;
+    outline: none;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+       border-radius: 30px;
+       flex: 1;
+       margin-right: 16px;
+       font-size: 18px;
+}
+
+   .search button{
+       border: 0;
+       outline: 0;
+       background: #ebfffc;
+       border-radius: 50px;
+       width: 60px;
+       height: 60px;
+       cursor: pointer;
+}
+
+.search button img{
+   width: 16px;
+}
+
+
  
