--- a/style.css
+++ b/style.css
@@ -54,5 +54,43 @@
    width: 16px;
 }
 
+.weather-icon{
+   width: 170px;
+   margin-top: 30px;
+}
 
+.weather h1{
+   font-size: 60px;
+   font-weight: 500;
+}
+
+.weather h2{
+   font-size: 45px;
+   font-weight: 100;
+   margin-top: -10px;
+}
  
+.details
+{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 0 20px;
+   margin-top: 50px;
+}
+
+.col{
+   display: flex;
+   align-items: center;
+   text-align: left;
+}
+
+.col img{
+   width: 50px;
+   margin-right: 10px;
+}
+
+.humidity, .wind{
+   font-size: 28px;
+   margin-top: -6px;
+}
